--- a/.gitignore
+++ b/.gitignore
@@ -246,5 +246,6 @@ $RECYCLE.BIN/
 
 #local enviromental variables
 env.json
+.vscode/
 
 # End of https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
